TEST_PROGRAMS/VALID/06/type_decl.go
package decl;
type a []int;
type b float64;
type c struct {
	x,y string;
};
type d [5]rune;
type (
  	e int;
  	f struct {
  		x,y float64;
  	};
);
