TEST_PROGRAMS/INVALID/09/blanktype.go
package blank_type

func main() {
    type (
        a int
        s struct {
            t int
            x, b []_
            y bool
        }
        c float64
    )
}
